using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace UnityTetris
{
    public class Block : MonoBehaviour
    {
        public int Px;
        public int Py;
    }

}
