@startuml

class Block
{
    + Px : int
    + Py : int
}

' フィールドの状態を管理する
interface IField
{
    + ResetField(sound : ISoundManager, width: int, height: int, borderLine : int) : void[]
    + Width() : int
    ' @return ブロックが積みあがってしまったらtrue, そうでなければfalse を返す
    + SetBlocks(blocks : Block[]) : bool

    + IsHit(blocks : Vector2Int[]) : bool
    + RefTransform() : Transform
}

class Field
{
    - _width : int
    - _height : int
    - _borderLine : int
    - _soundPlaces : UnityEngine.AudioSource
    ..
    - _activeParts : Block[,]
    - _sound : ISoundManager

    --
    + ResetField(sound : ISoundManager, width: int, height: int, borderLine : int) : void[]
    + Width() : int
    ' @return ブロックが積みあがってしまったらtrue, そうでなければfalse を返す
    + SetBlocks(blocks : Block[]) : bool

    + IsHit(blocks : Vector2Int[]) : bool
    + RefTransform() : Transform
}

' ゲームの進行を管理する
class GameController
{
    - _players : Player[]
    - _blockSetOptions : BlockSet[]
    - _sound : UnitySoundManager
    - _boot : StateGameBoot
    - _main : StateGameMain
    - _finish : StateGameFinish
    - _fallLevel: int
    ..
    --

    - Start() : void

    + BootGame() : void
    + RunGame() : void
    + FinishGame() : void
}

interface IPlayer
{
    + Setup(blockSetOptions : BlockSet[], sound : ISoundManager, fallLevel: int) : void
    + StartGame(parent : StateGameMain) : void
    + IsAlive() : bool
    + Dead() : void
    + PullNextBlock() : void
}


class Player
{
    - _field : Field
    - _input : InputManager
    - _soundCollide : UnityEngine.AudioSource
    ..
    - _parent : StateGameMain
    - _blockSetOptions : BlockSet[]
    - _sound : ISoundManager
    - _alive : bool
    - _currentBlock : BlockSet
    - _fallLevel: int
    --

    - FixedUpdate() : void

    + Setup(blockSetOptions : BlockSet[], sound : ISoundManager, fallLevel: int) : void
    + StartGame(parent : StateGameMain) : void
    + IsAlive() : bool
    + Dead() : void
    + PullNextBlock() : void
}

class StateGameBoot
{
    - _countMax : int
    - _counter : UnityEngine.UI.Text
    ..
    - _parent : GameController
    --

    + Setup(parent : GameController, player : Player[], blockSetOptions : BlockSet[], sound : ISoundManager, fallLevel: int) : void
    - CoRun() : IEnumerator
}

class StateGameMain
{
    - _parent : GameController
    - _players : IPlayer[]

    - GetNumberOfAlivingPlayer() : int

    + Setup(parent : GameController, players : Player[]) : void
    + PlayerGameOver(player : Player) : void
}

class StateGameFinish
{
    - _waitMax : float
    - _message : UnityEngine.UI.Text
    ..
    - _parent : GameController
    --

    + Setup(parent : GameController) : void
    - CoRun() : IEnumerator
}

interface IInputManager
{
    + IsRotateRight() : bool
    + IsRotateLeft() : bool
    + IsMoveRight() : bool
    + IsMoveLeft() : bool
    + IsMoveDown) : bool
}

abstract class InputManager
{
    + {abstract} IsRotateRight() : bool
    + {abstract} IsRotateLeft() : bool
    + {abstract} IsMoveRight() : bool
    + {abstract} IsMoveLeft() : bool
    + {abstract} IsMoveDown) : bool
}

class UnityKeyInputManager
{
    + IsRotateRight() : bool
    + IsRotateLeft() : bool
    + IsMoveRight() : bool
    + IsMoveLeft() : bool
    + IsMoveDown() : bool
}

interface IBlockSet
{
    + Setup(owner: IPlayer, filed: IField, input: IInputManager, sound: ISoundManager, fallLevel: int) : void
}

' ブロックの状態を管理する
class BlockSet
{
    - _soundCollide : UnityEngine.AudioSource
    - _prefabPart : Block
    - _partsPositions : Vector2Int[]
    ..
    - _activeBlocks : Block[]
    - _falling : bool
    - _field : IField
    - _owner : IPlayer
    - _input : IInputManager
    - _sound : ISoundManager
    - _rotStep : int
    - _centerPos : Vector2Int
    - _countWaitFalling : int
    - _countFalling : int
    - {const} CountWaitFallingLimit : int
    + {readonly} CountFallingLimit : int
    --

    - FixedUpdate() : void
    - UpdateInput() : void
    - RotateRight() : void
    - RotateLeft() : void
    - Rotate(dir : int) : void
    - ToBlocks() : Vector2Int[]
    - RotatePart(p : Vector2Int) : Vector2Int
    ' @return 移動できる場合はtrue, 何かにぶつかって移動できない場合はfalse
    - MoveRight() : bool
    ' @return 移動できる場合はtrue, 何かにぶつかって移動できない場合はfalse
    - MoveLeft() : bool
    - MoveDown() : void
    - Move() : void
    - ShowBlocks() : void
    - NeedToFall() : bool

    + Setup(owner: IPlayer, filed: IField, input: IInputManager, sound: ISoundManager, fallLevel: int) : void
    + CenterPos() : Vector2Int
}

interface ISoundManager
{
    + Play(sound : AudioSource) : void
    + Stop(sound : AudioSource) : void
}

class UnitySoundManager
{
    + Play(sound : AudioSource) : void
    + Stop(sound : AudioSource) : void
}

class StatusPanel
{
    - _scoreText : Text
 
    + ResetScore() : void
    + AddScore(addedScore : int) : void
}

Player "1" *-- "1" IField
Player "1" o-- "0, 1" IBlockSet
Player "1" o-- "1..*" IBlockSet
Player "1" *-- "1" InputManager
Player "1" o-- "1" ISoundManager

GameController "1" *-- "1..*" Player
GameController "1" *-- "1..*" BlockSet
GameController "1" *-- "1" StateGameBoot
GameController "1" *-- "1" StateGameMain
GameController "1" *-- "1" StateGameFinish
GameController "1" *-- "1" UnitySoundManager

StateGameMain "1" o--o "*" IPlayer

StatusPanel "1" --o "1" GameController

IInputManager <|.. InputManager
InputManager <|.. UnityKeyInputManager
ISoundManager <|.. UnitySoundManager
IBlockSet <|.. BlockSet
IField <|.. Field
IPlayer <|.. Player

Field "1" o-- "*" Block
BlockSet "1" o-- "*" Block
BlockSet "1" o-- "1" ISoundManager
BlockSet "1" o-- "1" IPlayer
BlockSet "1" o-- "1" IField

@enduml